# autoinvoice

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  testall.sh  tox.ini
autoinvoice/: __init__.py  __main__.py  cmdline.py  common.py  configs.py  driver.py  qrcode.py
autoinvoice/CompanyRegister/: CompanyRegisterPluginManager.py  ICompanyRegister.py  Poland.py  __init__.py  database.py
autoinvoice/CompanyRegister/plugins/: __init__.py  apiregon.py  apiregon2.py
autoinvoice/InvoiceNumbering/: IInvoiceNumber.py  __init__.py  getInvoiceNumber.py  path_to_number.py
autoinvoice/InvoiceNumbering/plugins/: path_to_number.py
autoinvoice/items_reader/: __init__.py  item_builder.py  read_items.py
autoinvoice/items_reader/plugins/: read_json.py
autoinvoice/mod_builder/: __init__.py  manager.py
autoinvoice/mod_builder/plugins/: iface.py  pdflatex_subprocess.py
autoinvoice/mod_character_replacer/: manager.py
autoinvoice/mod_character_replacer/plugins/: iface.py  tex.py
autoinvoice/mod_company_register/: __init__.py  database.py  manager.py
autoinvoice/mod_company_register/plugins/: apiregon.py  apiregon2.py  iface.py
autoinvoice/mod_invoice_numbering/: __init__.py  manager.py
autoinvoice/mod_invoice_numbering/plugins/: dummy_static.py  dummy_timebased.py  iface.py  path_to_number.py
autoinvoice/mod_items_reader/: item_builder.py  manager.py
autoinvoice/mod_qrcode/: manager.py
autoinvoice/mod_qrcode/plugins/: iface.py  zbp2d.py
autoinvoice/qrcode_generator/: qrmanager.py
autoinvoice/qrcode_generator/plugins/: iface.py  zbp2d.py  zbp2d_std.py
docker/: docker-compose.yml
docker/arch/: Dockerfile
docker/debian/: Dockerfile
docker/fedora/: Dockerfile
package/: config
tests/: cmdline_creator.py  configuration_creator.py  dummy.py  test_CompanyRegisterPluginManager.py  test_ICompanyRegister.py  test_Poland.py  test_apiregon.py  test_apiregon2.py  test_character_replacer.py  test_cmdline.py  test_configs.py  test_database.py  test_driver.py  test_path_to_number.py  test_pdflatex_subprocess.py  test_qrcode.py  test_read_json.py  test_read_json_quantity.py  test_retail.py  utils.py
tests/data/: config  config_apiregon  config_path_to_number  config_qrcode_zbp2d  config_read_json  dbase.db  dbase.sql  dbase_table.sql  items1.json  items4.json  items5.json  items6.json  sample1.xml  sample2.xml  template1.tex  template_path_to_number.tex  template_qrcode.tex  template_read_json.tex  text-5261040828.tex
tests/data/configs/: config.ini  config.json  path_to_number.ini  pdflatex_subprocess.ini  read_json.ini  read_json.json  retail.ini  zbp2d.ini  zbp2d.json
tests/data/dbases/: dbase.db  dbase.sql
tests/data/items/: items2.json  items3.json  items7.json
tests/data/templates/: companies_only.tex  qrcode.tex  read_json.tex  retail.tex  template_path_to_number.tex  text-5261040828.tex
wymagania/: BIR11-PrzykladoweDane.xml
wymagania/BIR11_StrukturyDanych/01-DaneSzukajPodmioty/: BIR11-DaneSzukajPodmioty-KomunikatyOBledach.xml  DaneSzukajPodmioty.xsd  DaneSzukajPodmiotyParametryWyszukiwania.xsd
wymagania/BIR11_StrukturyDanych/02-DanePobierzPelnyRaport/: BIR11-DanePobierzPelnyRaport-KomunikatyOBledach.xml  BIR11JednLokalnaOsFizycznej.xsd  BIR11JednLokalnaOsFizycznejPkd.xsd  BIR11JednLokalnaOsPrawnej.xsd  BIR11JednLokalnaOsPrawnejPkd.xsd  BIR11OsFizycznaDaneOgolne.xsd  BIR11OsFizycznaDzialalnoscCeidg.xsd  BIR11OsFizycznaDzialalnoscPozostala.xsd  BIR11OsFizycznaDzialalnoscRolnicza.xsd  BIR11OsFizycznaDzialalnoscSkreslonaDo20141108.xsd  BIR11OsFizycznaListaJednLokalnych.xsd  BIR11OsFizycznaPkd.xsd  BIR11OsPrawna.xsd  BIR11OsPrawnaListaJednLokalnych.xsd  BIR11OsPrawnaPkd.xsd  BIR11OsPrawnaSpCywilnaWspolnicy.xsd  BIR11TypPodmiotu.xsd
wymagania/BIR11_StrukturyDanych/03-DanePobierzRaportZbiorczy/: BIR11-RaportyZbiorcze-KomunikatyOBledach.xml  BIR11NoweJednostkiLokalne.xsd  (+5 more)
