[build-system]
requires = ["setuptools>=65.0.5", "wheel>=0.40.0", "tox>=4.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autoinvoice"
version = "1.3.0"
authors = [
  { name="Łukasz Buśko", email="lukasz.busko@guns4hire.cc" },
]
description='Invoice template generator, with plugins for downloading business clients information basin on tax payer id'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Topic :: Utilities",
  "Development Status :: 3 - Alpha",
]
keywords = ['invoice', 'invoices', 'latex generator']
dependencies = [
            'RegonAPI==1.3.1',
            'litex.regon==1.0.7',
            'requests==2.28.2',
            'qrcode==7.4.2',
            'pillow==9.4.0',
            'opencv-python==4.7.0.72',
        ]

[tool.setuptools]
py-modules = ["autoinvoce"]

[project.urls]
"Homepage" = "https://github.com/str0g/autoinvoice"
"Bug Tracker" = "https://github.com/str0g/autoinvoice/issues"
