[build-system]
requires = ["setuptools>=65.0.5", "wheel>=0.40.0", "tox>=4.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autoinvoice"
version = "1.3.0"
authors = [
  { name="Łukasz Buśko", email="lukasz.busko@guns4hire.cc" },
]
description='Invoice template generator, with plugins for downloading business clients information basin on tax payer id'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Topic :: Utilities",
  "Development Status :: 3 - Alpha",
]
keywords = ['invoice', 'invoices', 'latex generator']
dependencies = [
            'RegonAPI==1.3.1',
            'litex.regon==1.0.7',
            'requests==2.32.0',
            'qrcode==7.4.2',
            'pillow==10.3.0',
            'opencv-python==4.9.0.80',
        ]

[tool.setuptools]
packages = [
    "autoinvoice",
    "autoinvoice.mod_builder",
    "autoinvoice.mod_builder.plugins",
    "autoinvoice.mod_character_replacer",
    "autoinvoice.mod_character_replacer.plugins",
    "autoinvoice.mod_company_register",
    "autoinvoice.mod_company_register.plugins",
    "autoinvoice.mod_invoice_numbering",
    "autoinvoice.mod_invoice_numbering.plugins",
    "autoinvoice.mod_items_reader",
    "autoinvoice.mod_items_reader.plugins",
    "autoinvoice.mod_qrcode",
    "autoinvoice.mod_qrcode.plugins",
]

[project.urls]
"Homepage" = "https://github.com/str0g/autoinvoice"
"Bug Tracker" = "https://github.com/str0g/autoinvoice/issues"
